Ultima actualizacion antes de Subirla
Icono, texto, cambio de color del logo, scroll lento, etc.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
+
+    <meta name="description" content="Mateo Alvarez - Developer, Programador"/>
+    <meta name="keywords" content="Mateo, Alvarez, Desarrollador, Programador, Oficial, Montevideo, Uruguay"/> 
+
     <title>Mateo Álvarez</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img/icono.ico" />
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- SCROLLREVEAL -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- CSS PERSONAL -->
     <link rel="stylesheet" href="css/main.css">
-
 </head>
 
 <body>
@@ -53,9 +57,9 @@
                     <div class="header-content-right">
                        <h1 class="display-4">Mateo Álvarez</h1>
                        <p class="mt-3">
-                           Programador con estudios independientes. Me considero un apasionado del aprendizaje y y de la programación en general. 
-                            Domino lenguajes como Python y C# (en desarrollo), ademas de frameworks relacionados a los mismos (como Django). 
-                            Formo parte del programa b_IT de Cuti y de Jóvenes a Programar (Plan Ceibal). Mis experiencias parten hace un año 
+                           Programador con estudios independientes. Me considero un apasionado del aprendizaje y y de la programación en general. <br>
+                            Domino lenguajes como Python y C# (en desarrollo), ademas de frameworks relacionados a los mismos (como Django).<br>
+                            Formo parte del programa b_IT de Cuti y de Jóvenes a Programar (Plan Ceibal).<br> Mis experiencias parten hace un año 
                             y medio donde comencé a programar en Python 
                             con formación en la Documentación y cursos de YouTube (ademas de plataformas como Udemy y edX). </p>
                     </div>
@@ -64,13 +68,13 @@
         </div>
 
         <!-- PROYECTOS -->
-        <div class="mt-5 bg">
+        <div class="mt-5 bg" id="proyectos">
             <div class="container">
                 <hr>
                 <div class="row mt-5">
                     <div class="col-md-6"> </div>
                     <div class="col-md-6">
-                        <h2 class="display-4" id="proyectos">Proyectos</h2>
+                        <h2 class="display-4">Proyectos</h2>
                     </div>
                 </div>
                 <div class="row mt-5">
@@ -85,7 +89,10 @@
                                     <a type="button" class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/Mateoac12/Mascotas_Perdidas.uy">GitHub</a>
                                 </div>
                             </div>
-                            <p class="mt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, temporibus? Odit veritatis iste beatae aut eligendi eaque voluptatibus totam, atque esse quae minima a nam consectetur porro quia assumenda sit?</p>
+                            <p class="mt-2">Somos parte de una comunidad muy cercana a los animales, y como miembros de esta comunidad, cada uno de nosotros vivió o presenció la pérdida de una mascota.<br>
+                                De esta forma decidimos crear <span class="font-italic">MascotasPerdidas.com.uy</span>, un sitio web destinado a todos los usuarios que necesiten publicar anuncios de mascotas <sapan class="text-success">Perdidas</sapan> o <span class="text-info">Encontradas</span>.<br>
+                                Creemos que la mejor manera de ayudar a la comunidad es centralizando las publicaciones en un mismo sitio, a modo que, cada miembro que quiera colaborar con la búsqueda de una mascota, pueda hacerlo de una manera rápida y cómoda.
+                                </p>
                         </div>
                     </div>
                     <div class="col-md-6 my-auto">
@@ -106,7 +113,9 @@
                                     <a type="button" class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/Mateoac12/hola_suerte-python">GitHub</a>
                                 </div>
                             </div>
-                            <p class="mt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, temporibus? Odit veritatis iste beatae aut eligendi eaque voluptatibus totam, atque esse quae minima a nam consectetur porro quia assumenda sit?</p>
+                            <p class="mt-2">Aplicación para Sistemas operativos de PC, permite a los usuarios redactar un listado de participantes y la aplicación devolverá uno de forma aleatoria.<br>
+                                Sencilla pero con usos tan amplios como: Decidir que miembro de la familia lavará los platos esta noche o, en una reunión de amigos decidir quién va a invitar un trago más (de forma aleatoria). Los usos son ilimitados y recordar, el ganador (o perdedor) es sólo uno.
+                                </p>
                         </div>
                     </div>
                     <div class="col-md-6 my-auto">
@@ -127,7 +136,9 @@
                                     <a type="button" class="btn btn-outline-secondary btn-sm" target="_blank" href="https://github.com/Mateoac12/ArduiLeds-in-bike">GitHub</a>
                                 </div>
                             </div>
-                            <p class="mt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, temporibus? Odit veritatis iste beatae aut eligendi eaque voluptatibus totam, atque esse quae minima a nam consectetur porro quia assumenda sit?</p>
+                            <p class="mt-2">Sistema montado en Arduino UNO que genera una imagen o pequeño GIF en una o ambas ruedas de una bicicleta (en movimiento).<br> 
+                                Mediante un sensor hall recolectamos el tiempo en el que la rueda da un giro completo, y durante ese tiempo reproducimos una matriz en una tira de leds ensamblada a mano por todo el radio de la rueda.
+                                </p>
                         </div>
                     </div>
                     <div class="col-md-6 my-auto">
@@ -150,7 +161,7 @@
                 <div class="row mt-5">
                     <div class="col-md-6"> </div>
                     <div class="col-md-6">
-                        <h2 class="display-4">Experiencias</h2>
+                        <h2 class="display-4" id="experiencias">Experiencias</h2>
                     </div>
                 </div>
                 <div class="row mt-5">
@@ -164,7 +175,10 @@
                                     <span class="badge badge-pill badge-secondary">Medio</span>
                                 </div>
                             </div>
-                            <p class="mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, possimus in. Totam voluptatum autem laudantium nobis, reiciendis quia accusamus nulla, optio saepe unde in minus quo similique tempora est? Ipsa!</p>
+                            <p class="mt-2">Dominio en las bases del lenguaje. Desde la sintaxis hasta paquetes, librerías y framework del mismo.
+                                 Interfaces graficas básicas por medio de Tkinter y tecnologías de Backend con Django.
+                                 Vinculación a BBDD externas mediante Peewee o sqlite3 (CRUD).
+                                 Mi objetivo es desempeñar fuertes bases en Inteligencia Artificial y Machine Learning.  </p>
                         </div>
                     </div>
                     <div class="col-md-6 my-auto">
@@ -184,7 +198,8 @@
                                     <span class="badge badge-pill badge-secondary">Básico</span>
                                 </div>
                             </div>
-                            <p class="mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, possimus in. Totam voluptatum autem laudantium nobis, reiciendis quia accusamus nulla, optio saepe unde in minus quo similique tempora est? Ipsa!</p>
+                            <p class="mt-2">Comenzado a principios del 2020. Nivel de sintaxis básica-media (hasta POO) y WPF (como conocimientos en Interfaces Graficas).
+                                 Mi objetivo es desempeñar un mejor manejo en esta última y adentrarme en plataformas como Unity para el diseño y desarrollo de videojuegos.</p>
                         </div>
                     </div>
                     <div class="col-md-6 my-auto">
@@ -204,7 +219,9 @@
                                     <span class="badge badge-pill badge-secondary">Medio</span>
                                 </div>
                             </div>
-                            <p class="mt-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, possimus in. Totam voluptatum autem laudantium nobis, reiciendis quia accusamus nulla, optio saepe unde in minus quo similique tempora est? Ipsa!</p>
+                            <p class="mt-2">Dominio en Frontend mediante HTML, CSS, Bootstrap y ScrollReveal.
+                                 Por parte del Backend, conocimientos en Django (por medio de Python), y en relación a uso y manipulación de BBDD: SQLite y PostgreSQL.
+                                 Mi objetivo es crear páginas web complejas en la que los usuarios queden sorprendidos al entrar, con atractivas ilustraciones y buen funcionamiento.</p>
                         </div>
                     </div>
                     <div class="col-md-6 my-auto">
@@ -221,13 +238,13 @@
         </div>
 
         <!-- CONTACTO -->
-        <div id="contacto" class="mt-5">
+        <div class="mt-5">
             <div class="container">
                 <hr>
                 <div class="row mt-5">
                     <div class="col-md-6"> </div>
                     <div class="col-md-6">
-                        <h2 class="display-4">Contacto</h2>
+                        <h2 class="display-4" id="contacto">Contacto</h2>
                     </div>
                 </div>
                 <div class="row text-center">
@@ -272,50 +289,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <!-- SCRIPTS -->
-    <script>
-        ScrollReveal().reveal('.navbar', {
-            duration: 2000,
-            distance: '150%',
-            origin: 'top',
-        });
-        ScrollReveal().reveal('.header-content-left', {
-            delay: 750,
-            duration: 2000,
-            distance: '150%',
-            origin: 'left'
-        })
-        ScrollReveal().reveal('.header-content-right', {
-            duration: 2000,
-            distance: '150%',
-            origin: 'bottom'
-        })
-        ScrollReveal().reveal('.project-content-left', {
-            duration: 2000,
-            origin: 'left',
-            distance: '150%'
-        })
-        ScrollReveal().reveal('.project-content-right', {
-            duration: 2000,
-            origin: 'right',
-            distance: '150%'
-        })
-        ScrollReveal().reveal('.experience-right-content', {
-            duration: 2000,
-            origin: 'right',
-            distance: '150%'
-        })
-        ScrollReveal().reveal('.experience-left-content', {
-            duration: 2000,
-            origin: 'left',
-            distance: '150%'
-        })
-        ScrollReveal().reveal('.contacto-content-qr', {
-            duration: 2000,
-            origin: 'bottom',
-            distance: '150%'
-        })
-
-    </script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
