--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/icono.ico" />
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- SCROLLREVEAL -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
 <body>
@@ -284,11 +286,75 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    
+    <script>
+        //ScrollReveal
+        window.sr = ScrollReveal();
+        sr.reveal('.navbar', {
+            duration: 2000,
+            distance: '150%',
+            origin: 'top',
+        });
+        sr.reveal('.header-content-left', {
+            delay: 750,
+            duration: 2000,
+            distance: '150%',
+            origin: 'left'
+        })
+        sr.reveal('.header-content-right', {
+            duration: 2000,
+            distance: '150%',
+            origin: 'bottom'
+        })
+        sr.reveal('#proyectos', {
+            duration: 2000,
+            delay: 750
+        })
+        sr.reveal('.project-content-left', {
+            duration: 2000,
+            origin: 'left',
+            distance: '150%'
+        })
+        sr.reveal('.project-content-right', {
+            duration: 2000,
+            origin: 'right',
+            distance: '150%'
+        })
+        sr.reveal('#experiencias', {
+            duration: 3000,
+            delay: 750
+        })
+        sr.reveal('.experience-right-content', {
+            duration: 2000,
+            origin: 'right',
+            distance: '150%'
+        })
+        sr.reveal('.experience-left-content', {
+            duration: 2000,
+            origin: 'left',
+            distance: '150%'
+        })
+        sr.reveal('.contacto-content-qr', {
+            duration: 2000,
+            origin: 'bottom',
+            distance: '150%'
+        })
+        sr.reveal('#contacto', {
+            duration: 3000,
+            delay: 750
+        })
 
-    <!-- SCROLLREVEAL -->
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <!-- SCRIPTS -->
-    <script src="js/main.js"></script>
+        //Smooth Scrolling
 
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    </script>
 </body>
 </html>
