Agregar etiqueta meta para moviles de Bootstrap

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="description" content="Mateo Alvarez - Developer, Programador"/>
     <meta name="keywords" content="Mateo, Alvarez, Desarrollador, Programador, Oficial, Montevideo, Uruguay"/> 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Mateo Álvarez</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/icono.ico" />
     <!-- BOOTSTRAP CSS -->
