Cambiar la aparicion de los elementos de 150% a 150px
Para intentar solucionar el problema en dispositivios android

--- a/index.html
+++ b/index.html
@@ -292,18 +292,18 @@
         window.sr = ScrollReveal();
         sr.reveal('.navbar', {
             duration: 2000,
-            distance: '150%',
+            distance: '150px',
             origin: 'top',
         });
         sr.reveal('.header-content-left', {
             delay: 750,
             duration: 2000,
-            distance: '150%',
+            distance: '150px',
             origin: 'left'
         })
         sr.reveal('.header-content-right', {
             duration: 2000,
-            distance: '150%',
+            distance: '150px',
             origin: 'bottom'
         })
         sr.reveal('#proyectos', {
@@ -313,12 +313,12 @@
         sr.reveal('.project-content-left', {
             duration: 2000,
             origin: 'left',
-            distance: '150%'
+            distance: '150px'
         })
         sr.reveal('.project-content-right', {
             duration: 2000,
             origin: 'right',
-            distance: '150%'
+            distance: '150px'
         })
         sr.reveal('#experiencias', {
             duration: 3000,
@@ -327,17 +327,17 @@
         sr.reveal('.experience-right-content', {
             duration: 2000,
             origin: 'right',
-            distance: '150%'
+            distance: '150px'
         })
         sr.reveal('.experience-left-content', {
             duration: 2000,
             origin: 'left',
-            distance: '150%'
+            distance: '150px'
         })
         sr.reveal('.contacto-content-qr', {
             duration: 2000,
             origin: 'bottom',
-            distance: '150%'
+            distance: '150px'
         })
         sr.reveal('#contacto', {
             duration: 3000,
